# kaapiwire

./: .gitignore  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: db.rs  main.rs  pipeline.rs
src-tauri/src/sources/: blogs.rs  general.rs  github_trending.rs  hn.rs  mod.rs  newsdata.rs  reddit.rs  techmeme.rs
