[package]
name = "kaapiwire"
version = "0.1.0"
description = "A minimal always-on-top tech news widget."
authors = ["Kaapiwire"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
feed-rs = "2"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls-native-roots", "system-proxy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-runtime = "2"
tokio = { version = "1", features = ["time"] }
url = "2"
window-vibrancy = "0.7"
